--- a/Languages/default-en.xml
+++ b/Languages/default-en.xml
@@ -15,7 +15,7 @@
 		author="Michael Stokes"
 		updatedBy="Rolandas Rudomanskis, ceceboy, ale5000"
 		description="Shareaza Default English Skin File"
-		link="http://www.shareaza.com/"
+		link="http://shareaza.sourceforge.net/"
 		email="contact@shareaza.com"
 		version="2.3.0.0"
 		type="Language"
