Fixed dutch not loading
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@6047 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/Languages/default-nl.xml
+++ b/Languages/default-nl.xml
@@ -1589,6 +1589,7 @@
 		<link target="raza:command:ID_HELP_FAQ" format="bu" align="middle">Help</link>
 		<text align="middle">&#160;- Shareaza's gebruikerhandleiding en FAQ</text>
 		<newline gap="18" indent="0"/>
+		<group id="5">
 			<icon res="128" width="32" height="32"/><gap size="8"/>
 			<heading align="middle">B E S T U R I N G &#160; V I A &#160; I N T E R N E T &#160; I S &#160; I N G E S C H A K E L D</heading>
 			<newline gap="8" indent="42"/>
