Fixed malformed Portuguese XML.
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@6054 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/Languages/default-pt-br.xml
+++ b/Languages/default-pt-br.xml
@@ -1505,7 +1505,7 @@
 			<icon res="130" width="32" height="32"/><gap size="8"/>
 			<heading align="middle">S E J A &#160; C O N E C T A D O</heading>
 			<newline gap="8" indent="42"/>
-			<text>Bem-vindo ao Shareaza! 
+			<text>Bem-vindo ao Shareaza!</text>
 			<newline gap="8" indent="42"/>
 			<text>Você não está conectado atualmente a quaisquer redes peer to peer. &#160;</text>
 			<link target="raza:command:ID_NETWORK_CONNECT">Clique aqui para começar!</link>
