--- a/Languages/default-fr.xml
+++ b/Languages/default-fr.xml
@@ -1,22 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Shareaza Default French Skin File -->
+
+<!-- Shareaza Default French Skin File --> <!-- This translation is based on default-en.xml SVN rev.xxxx -->
+
 <!-- This skin basically represents the current Shareaza defaults. You can use this file as -->
 <!-- a basis for creating new skins, however in a new skin be sure to ONLY include the sections -->
 <!-- which you changed! Including sections you did not edit will reduce performance and limit -->
 <!-- compatibility with future versions and other skins. -->
+
 <!-- Body element, don't touch -->
 <skin xmlns="http://www.shareaza.com/schemas/Skin.xsd" version="1.0">
+
 <!-- Manifest -->
-<manifest name="Français" author="Antoine Martin-Lalande (Sensi)"
-	updateBy="CRF"
-	description="Shareaza French Skin File"
-	link="http://www.shareaza.com/"
-	email="shareaza.fr(at)gmail.com"
-	version="2.2.5.1"
-	type="Language"
-	language="fr"
-	prompt="Cliquez ici pour utiliser Shareaza en Français."
+<manifest	name="Français"
+		author="Antoine Martin-Lalande (Sensi)"
+		updateBy="CRF"
+		description="Shareaza Default French Skin File"
+		link="http://shareaza.sourceforge.net/"
+		email="shareaza.fr(at)gmail(dot)com"
+		version="2.2.5.1"
+		type="Language"
+		language="fr"
+		prompt="Cliquez ici pour utiliser Shareaza en Français."
 />
+
 <!-- Toolbar Definitions -->
 <toolbars>
 	<!-- MAIN WINDOW -->
