--- a/Languages/default-af.xml
+++ b/Languages/default-af.xml
@@ -1,19 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Shareaza Afrikaanse Omslaglêer - Weergawe: 27 Oktober 2005 vir Shareaza 2.2.0.2 -->
-<!-- Body element -->
+
+<!-- Shareaza Default Afrikaans Skin File --> <!-- This translation is based on default-en.xml SVN rev.xxxx --> <!-- Weergawe: 27 Oktober 2005 vir Shareaza 2.2.0.2 -->
+
+<!-- This skin basically represents the current Shareaza defaults. You can use this file as -->
+<!-- a basis for creating new skins, however in a new skin be sure to ONLY include the sections -->
+<!-- which you changed! Including sections you did not edit will reduce performance and limit -->
+<!-- compatibility with future versions and other skins. -->
+
+<!-- Body element, don't touch -->
 <skin xmlns="http://www.shareaza.com/schemas/Skin.xsd" version="1.0">
+
 <!-- Manifest -->
-<manifest name="Afrikaans"
-	author="Johann van der Walt (Thesage)"
-	updatedBy="Thesage"
-	description="Shareaza Afrikaanse Omslaglêer"
-	link="http://www.shareaza.com"
-	email="jvdwalt AT tuks DOT co.za"
-	version="2.2.0.2"
-	type="Language"
-	language="af"
-	prompt="Kliek hier om Afrikaans as jou taal te kies."
+<manifest	name="Afrikaans"
+		author="Johann van der Walt (Thesage)"
+		updatedBy="Thesage"
+		description="Shareaza Default Afrikaans Skin File"
+		link="http://shareaza.sourceforge.net/"
+		email="jvdwalt(at)tuks(dot)co.za"
+		version="2.2.0.2"
+		type="Language"
+		language="af"
+		prompt="Kliek hier om Afrikaans as jou taal te kies."
 />
+
 <!-- Toolbar Definitions -->
 <toolbars>
 	<!-- MAIN WINDOW -->
