--- a/Languages/default-chs.xml
+++ b/Languages/default-chs.xml
@@ -1,11 +1,11 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 
-<!-- Shareaza Chinese(Simplified) Skin File -->
+<!-- Shareaza Default Chinese (Simplified) Skin File --> <!-- This translation is based on default-en.xml SVN rev.xxxx -->
 
 <!-- This skin basically represents the current Shareaza defaults. You can use this file as -->
 <!-- a basis for creating new skins, however in a new skin be sure to ONLY include the sections -->
-<!-- which you changed!  Including sections you did not edit will reduce performance and limit  -->
-<!-- compatibility with future versions and other skins.  -->
+<!-- which you changed! Including sections you did not edit will reduce performance and limit -->
+<!-- compatibility with future versions and other skins. -->
 
 <!-- Body element, don't touch -->
 <skin xmlns="http://www.shareaza.com/schemas/Skin.xsd" version="1.0">
@@ -13,15 +13,16 @@
 <fonts>
 	<font name="System.Plain" face="Tahoma" size="11" />
 	<font name="System.Bold" face="Tahoma" size="11" weight="bold" />
+	<font name="Panel.Caption" face="Tahoma" size="11" />
 </fonts>
 
 <!-- Manifest -->
 <manifest	name="简体中文"
 		author="STC"
 		updatedBy="Sanly"
-		description="Shareaza Chinese(Simplified) Skin File"
+		description="Shareaza Chinese (Simplified) Skin File"
 		link="http://www.p2pnet.cn/shareaza"
-		email="ShareazaSTC(AT)gmail(DOT)com"
+		email="ShareazaSTC(at)gmail(dot)com"
 		version="2.2.2.27 (EN3706)"
 		type="Language"
 		language="chs"
