--- a/Languages/default-cz.xml
+++ b/Languages/default-cz.xml
@@ -1,26 +1,26 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 
-<!-- Shareaza Default Czech Skin File -->
+<!-- Shareaza Default Czech Skin File --> <!-- This translation is based on default-en.xml SVN rev.xxxx -->
 
 <!-- This skin basically represents the current Shareaza defaults. You can use this file as -->
 <!-- a basis for creating new skins, however in a new skin be sure to ONLY include the sections -->
-<!-- which you changed!  Including sections you did not edit will reduce performance and limit  -->
-<!-- compatibility with future versions and other skins.  -->
+<!-- which you changed! Including sections you did not edit will reduce performance and limit -->
+<!-- compatibility with future versions and other skins. -->
 
 <!-- Body element, don't touch -->
 <skin xmlns="http://www.shareaza.com/schemas/Skin.xsd" version="1.0">
 
 <!-- Manifest -->
 <manifest	name="Čeština"
-                       author="Prometheus"
-                       updateBy="prometheus.phoenix@gmail.com"
-                       description="Shareaza Default Czech Skin File"
-                       link="http://www.shareaza.com/"
-                       email="contact@shareaza.com"
-                       version="2.2.2.9"
-                       type="Language"
-                       language="cz"
-                       prompt="Kliknutím si zvolíte&#160;&#269;eštinu."
+		author="Prometheus"
+		updateBy=""
+		description="Shareaza Default Czech Skin File"
+		link="http://shareaza.sourceforge.net/"
+		email="prometheus.phoenix(at)gmail(dot)com"
+		version="2.2.2.9"
+		type="Language"
+		language="cz"
+		prompt="Kliknutím si zvolíte&#160;&#269;eštinu."
 />
 
 <!-- Toolbar Definitions -->
