--- a/Languages/default-de.xml
+++ b/Languages/default-de.xml
@@ -1,24 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Shareaza Default German Skin File -->
+
+<!-- Shareaza Default German Skin File --> <!-- This translation is based on default-en.xml SVN rev.xxxx -->
+
 <!-- This skin basically represents the current Shareaza defaults. You can use this file as -->
 <!-- a basis for creating new skins, however in a new skin be sure to ONLY include the sections -->
-<!-- which you changed!  Including sections you did not edit will reduce performance and limit  -->
-<!-- compatibility with future versions and other skins.  -->
+<!-- which you changed! Including sections you did not edit will reduce performance and limit -->
+<!-- compatibility with future versions and other skins. -->
 
 <!-- Body element, don't touch -->
 <skin xmlns="http://www.shareaza.com/schemas/Skin.xsd" version="1.0">
+
 <!-- Manifest -->
-<manifest name="Deutsch"
-	author="Jann Röder"
-	updatedBy="ZeRO, Frontier, Jann Röder"
-	description="Shareaza 2.2 German Skin File"
-	link="http://www.shareaza.com/"
-	email="spooky23 at arcor dot de"
-	version="2.2.3.3"
-	type="Language"
-	language="de"
-	prompt="Klicken Sie hier um Deutsch als Sprache zu wählen."
+<manifest	name="Deutsch"
+		author="Jann Röder"
+		updatedBy="ZeRO, Frontier, Jann Röder"
+		description="Shareaza Default German Skin File"
+		link="http://shareaza.sourceforge.net/"
+		email="spooky23(at)arcor(dot)de"
+		version="2.2.3.3"
+		type="Language"
+		language="de"
+		prompt="Klicken Sie hier um Deutsch als Sprache zu wählen."
 />
+
 <!-- Toolbar Definitions -->
 <toolbars>
 	<!-- MAIN WINDOW -->
