--- a/Languages/default-ee.xml
+++ b/Languages/default-ee.xml
@@ -1,13 +1,19 @@
-﻿<?xml version="1.0" encoding="UTF-8" ?>
+﻿<?xml version="1.0" encoding="UTF-8"?>
 
-<!-- Shareaza Default Eesti Skin File -->
+<!-- Shareaza Default Estonian Skin File --> <!-- This translation is based on default-en.xml SVN rev.xxxx -->
+
+<!-- This skin basically represents the current Shareaza defaults. You can use this file as -->
+<!-- a basis for creating new skins, however in a new skin be sure to ONLY include the sections -->
+<!-- which you changed! Including sections you did not edit will reduce performance and limit -->
+<!-- compatibility with future versions and other skins. -->
+
 <!-- Special characters used in Estonian:
-
-Umlauts:
+ Umlauts:
     &#196;  Ä  &#228;  ä
     &#214;  Ö  &#246;  ö
     &#220;  Ü  &#252;  ü
 -->
+
 <!-- Body element, don't touch -->
 <skin xmlns="http://www.shareaza.com/schemas/Skin.xsd" version="1.0">
 
@@ -15,9 +21,9 @@ Umlauts:
 <manifest	name="Eesti"
 		author="Janza"
 		updateBy="Felix Kütt"
-		description="Shareaza Default Eesti Skin File"
-		link="http://www.shareaza.com/"
-		email="janekk32@solo.delfi.ee"
+		description="Shareaza Default Estonian Skin File"
+		link="http://shareaza.sourceforge.net/"
+		email="janekk32(at)solo.delfi(dot)ee"
 		version="2.2.2.9"
 		type="Language"
 		language="ee"
