--- a/Languages/default-en.xml
+++ b/Languages/default-en.xml
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 
-<!-- Shareaza Default English Skin File -->
+<!-- Shareaza Default English Skin File --> <!-- This translation is based on default-en.xml SVN rev.xxxx -->
 
 <!-- This skin basically represents the current Shareaza defaults. You can use this file as -->
 <!-- a basis for creating new skins, however in a new skin be sure to ONLY include the sections -->
@@ -16,7 +16,7 @@
 		updatedBy="Rolandas Rudomanskis, ceceboy, ale5000"
 		description="Shareaza Default English Skin File"
 		link="http://shareaza.sourceforge.net/"
-		email="contact@shareaza.com"
+		email="contact(at)shareaza(dot)com"
 		version="2.3.0.0"
 		type="Language"
 		language="en"
