--- a/Languages/default-es.xml
+++ b/Languages/default-es.xml
@@ -1,15 +1,22 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<!-- Shareaza Spanish Skin File -->
-<!-- This is the first version to introduce full unicode (UTF-8) encoding -->
+﻿<?xml version="1.0" encoding="UTF-8"?>
+
+<!-- Shareaza Default Spanish Skin File --> <!-- This translation is based on default-en.xml SVN rev.xxxx -->
+
+<!-- This skin basically represents the current Shareaza defaults. You can use this file as -->
+<!-- a basis for creating new skins, however in a new skin be sure to ONLY include the sections -->
+<!-- which you changed! Including sections you did not edit will reduce performance and limit -->
+<!-- compatibility with future versions and other skins. -->
+
+<!-- Body element, don't touch -->
 <skin xmlns="http://www.shareaza.com/schemas/Skin.xsd" version="1.0">
 
 <!-- Manifest -->
-<manifest name="Español"
+<manifest	name="Español"
 		author="dague12"
 		updatedBy="help"
-		description="Traducción de Shareaza al Español Internacional"
-		link="http://www.shareaza.com/"
-		email="luis.help@gmail.com"
+		description="Shareaza Default Spanish Skin File"
+		link="http://shareaza.sourceforge.net/"
+		email="luis.help(at)gmail(dot)com"
 		version="2.2.3.3"
 		type="Language"
 		language="es"
