--- a/Languages/default-fi.xml
+++ b/Languages/default-fi.xml
@@ -1,22 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Shareaza Default FinnishSkin File -->
+
+<!-- Shareaza Default Finnish Skin File --> <!-- This translation is based on default-en.xml SVN rev.xxxx -->
+
 <!-- This skin basically represents the current Shareaza defaults. You can use this file as -->
 <!-- a basis for creating new skins, however in a new skin be sure to ONLY include the sections -->
-<!-- which you changed!  Including sections you did not edit will reduce performance and limit  -->
-<!-- compatibility with future versions and other skins.  -->
+<!-- which you changed! Including sections you did not edit will reduce performance and limit -->
+<!-- compatibility with future versions and other skins. -->
+
 <!-- Body element, don't touch -->
 <skin xmlns="http://www.shareaza.com/schemas/Skin.xsd" version="1.0">
+
 <!-- Manifest -->
 <manifest	name="Suomi" 
 		author="Toni Kaija"
+		updatedBy=""
 		description="Shareaza Default Finnish Skin File"
 		link="http://www.gamerfactory.co.nr/"
-		email="gamerfactory@gmail.com"
+		email="gamerfactory(at)gmail(dot)com"
 		version="2.1.3.7"
 		type="Language"
 		language="fi"
 		prompt="Klikkaa tähän valitaksesi Suomen käyttökieleksi."
 />
+
 <!-- Toolbar Definitions -->
 <toolbars>
 	<!-- MAIN WINDOW -->
