--- a/Languages/default-hr.xml
+++ b/Languages/default-hr.xml
@@ -1,6 +1,12 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 
-<!-- Shareaza Default Croatian Skin File -->
+<!-- Shareaza Default Croatian Skin File --> <!-- This translation is based on default-en.xml SVN rev.xxxx -->
+
+<!-- This skin basically represents the current Shareaza defaults. You can use this file as -->
+<!-- a basis for creating new skins, however in a new skin be sure to ONLY include the sections -->
+<!-- which you changed! Including sections you did not edit will reduce performance and limit -->
+<!-- compatibility with future versions and other skins. -->
+
 <!-- Body element, don't touch -->
 <skin xmlns="http://www.shareaza.com/schemas/Skin.xsd" version="1.0">
 
@@ -9,8 +15,8 @@
 		author="Biza"
 		updatedBy="Biza"
 		description="Shareaza Default Croatian Skin File"
-		link="http://www.shareaza.com/"
-		email="contact@shareaza.com"
+		link="http://shareaza.sourceforge.net/"
+		email=""
 		version="2.2.0.2"
 		type="Language"
 		language="hr"
