--- a/Languages/default-ja.xml
+++ b/Languages/default-ja.xml
@@ -1,27 +1,28 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 
-<!-- Shareaza Default Japanese Skin File -->
+<!-- Shareaza Default Japanese Skin File --> <!-- This translation is based on default-en.xml SVN rev.xxxx -->
 
 <!-- This skin basically represents the current Shareaza defaults. You can use this file as -->
 <!-- a basis for creating new skins, however in a new skin be sure to ONLY include the sections -->
-<!-- which you changed!  Including sections you did not edit will reduce performance and limit  -->
-<!-- compatibility with future versions and other skins.  -->
+<!-- which you changed! Including sections you did not edit will reduce performance and limit -->
+<!-- compatibility with future versions and other skins. -->
 
 <!-- Body element, don't touch -->
 <skin xmlns="http://www.shareaza.com/schemas/Skin.xsd" version="1.0">
 
 <fonts>
-      <font name="System.Plain" face="MS UI Gothic" size="12" weight="plain" />
-      <font name="System.Bold" face="MS UI Gothic" size="12" weight="bold" />
-      <font name="Panel.Caption" face="MS UI Gothic" size="12" weight="plain" />
+	<font name="System.Plain" face="MS UI Gothic" size="12" weight="plain" />
+	<font name="System.Bold" face="MS UI Gothic" size="12" weight="bold" />
+	<font name="Panel.Caption" face="MS UI Gothic" size="12" weight="plain" />
 </fonts>
 
 <!-- Manifest -->
 <manifest	name="日本語"
 		author="ワン公(DukeDog) and CyberBob"
-		description="Shareaza 日本語スキンファイル"
+		updatedBy=""
+		description="Shareaza Default Japanese Skin File"
 		link="http://www.dukedog.flnet.org/"
-		email="countnyan@hotmail.com"
+		email="countnyan(at)hotmail(dot)com"
 		version="2.2.4.0"
 		type="Language"
 		language="ja"
