--- a/Languages/default-lt.xml
+++ b/Languages/default-lt.xml
@@ -1,5 +1,12 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
-<!-- Shareaza Default Lithuanian Skin File -->
+
+<!-- Shareaza Default Lithuanian Skin File --> <!-- This translation is based on default-en.xml SVN rev.xxxx -->
+
+<!-- This skin basically represents the current Shareaza defaults. You can use this file as -->
+<!-- a basis for creating new skins, however in a new skin be sure to ONLY include the sections -->
+<!-- which you changed! Including sections you did not edit will reduce performance and limit -->
+<!-- compatibility with future versions and other skins. -->
+
 <!-- Body element, don't touch -->
 <skin xmlns="http://www.shareaza.com/schemas/Skin.xsd" version="1.0">
 
@@ -7,8 +14,8 @@
 <manifest	name="Lietuvių"
 		author="Rolandas Rudomanskis"
 		updatedBy="Rolandas Rudomanskis"
-		description="Shareaza Lithuanian Skin File"
-		link="http://www.shareaza.com/"
+		description="Shareaza Default Lithuanian Skin File"
+		link="http://shareaza.sourceforge.net/"
 		email="rrol2002(at)hotmail(dot)com"
 		version="2.3.0.0"
 		type="Language"
