--- a/Languages/default-no.xml
+++ b/Languages/default-no.xml
@@ -1,11 +1,11 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 
-<!-- Shareaza Norwegian Skin File based on English CVS v1.76 -->
+<!-- Shareaza Default Norwegian Skin File --> <!-- This translation is based on default-en.xml SVN rev.xxxx --> <!-- Based on English CVS v1.76 -->
 
 <!-- This skin basically represents the current Shareaza defaults. You can use this file as -->
 <!-- a basis for creating new skins, however in a new skin be sure to ONLY include the sections -->
-<!-- which you changed!  Including sections you did not edit will reduce performance and limit  -->
-<!-- compatibility with future versions and other skins.  -->
+<!-- which you changed! Including sections you did not edit will reduce performance and limit -->
+<!-- compatibility with future versions and other skins. -->
 
 <!-- Body element, don't touch -->
 <skin xmlns="http://www.shareaza.com/schemas/Skin.xsd" version="1.0">
@@ -14,9 +14,9 @@
 <manifest	name="Norsk"
 		author="Tom Seland"
 		updatedBy="Tom Seland"
-		description="Shareaza Norwegian Skin File"
-		link="http://www.shareaza.com/"
-		email="contact@shareaza.com"
+		description="Shareaza Default Norwegian Skin File"
+		link="http://shareaza.sourceforge.net/"
+		email=""
 		version="2.2.0.2"
 		type="Language"
 		language="no"
