--- a/Languages/default-pl.xml
+++ b/Languages/default-pl.xml
@@ -1,11 +1,11 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 
-<!-- Shareaza Default Polish Skin File -->
+<!-- Shareaza Default Polish Skin File --> <!-- This translation is based on default-en.xml SVN rev.xxxx -->
 
 <!-- This skin basically represents the current Shareaza defaults. You can use this file as -->
 <!-- a basis for creating new skins, however in a new skin be sure to ONLY include the sections -->
-<!-- which you changed!  Including sections you did not edit will reduce performance and limit  -->
-<!-- compatibility with future versions and other skins.  -->
+<!-- which you changed! Including sections you did not edit will reduce performance and limit -->
+<!-- compatibility with future versions and other skins. -->
 
 <!-- Body element, don't touch -->
 <skin xmlns="http://www.shareaza.com/schemas/Skin.xsd" version="1.0">
@@ -16,7 +16,7 @@
 		updatedBy="Xzbeat"
 		description="Shareaza Default Polish Skin File"
 		link="http://www.myservice.pl/"
-		email="brov@myservice.pl, michalg17@wp.pl, Xzbeat@gmail.com"
+		email="brov(at)myservice(dot)pl, michalg17(at)wp(dot)pl, Xzbeat(at)gmail(dot)com"
 		version="2.1.2.7"
 		type="Language"
 		language="pl"
