--- a/Languages/default-ru.xml
+++ b/Languages/default-ru.xml
@@ -1,7 +1,11 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 
-<!-- Shareaza Default Russian Skin File -->
+<!-- Shareaza Default Russian Skin File --> <!-- This translation is based on default-en.xml SVN rev.xxxx -->
 
+<!-- This skin basically represents the current Shareaza defaults. You can use this file as -->
+<!-- a basis for creating new skins, however in a new skin be sure to ONLY include the sections -->
+<!-- which you changed! Including sections you did not edit will reduce performance and limit -->
+<!-- compatibility with future versions and other skins. -->
 
 <!-- Body element, don't touch -->
 <skin xmlns="http://www.shareaza.com/schemas/Skin.xsd" version="1.0">
@@ -11,6 +15,8 @@
 		author="dAbserver"
 		updatedBy="Rolandas Rudomanskis"
 		description="Shareaza Default Russian Skin File"
+		link="http://shareaza.sourceforge.net/"
+		email=""
 		version="2.3.0.0"
 		type="Language"
 		language="ru"
