--- a/Languages/default-sq.xml
+++ b/Languages/default-sq.xml
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 
-<!-- Shareaza Default Albanian Skin File -->
+<!-- Shareaza Default Albanian Skin File --> <!-- This translation is based on default-en.xml SVN rev.xxxx -->
 
 <!-- This skin basically represents the current Shareaza defaults. You can use this file as -->
 <!-- a basis for creating new skins, however in a new skin be sure to ONLY include the sections -->
@@ -15,8 +15,8 @@
 		author="Besmir Godole"
 		updatedBy="Besmir Godole"
 		description="Shareaza Default Albanian Skin File"
-		link="http://www.shareaza.com/"
-		email="bgodole@gmail.com"
+		link="http://shareaza.sourceforge.net/"
+		email="bgodole(at)gmail(dot)com"
 		version="2.2.5.0"
 		type="Language"
 		language="sq"
