--- a/Languages/default-tw.xml
+++ b/Languages/default-tw.xml
@@ -1,11 +1,11 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 
-<!-- Shareaza Default English Skin File -->
+<!-- Shareaza Default Chinese (Traditional) Skin File --> <!-- This translation is based on default-en.xml SVN rev.xxxx -->
 
 <!-- This skin basically represents the current Shareaza defaults. You can use this file as -->
 <!-- a basis for creating new skins, however in a new skin be sure to ONLY include the sections -->
-<!-- which you changed!  Including sections you did not edit will reduce performance and limit  -->
-<!-- compatibility with future versions and other skins.  -->
+<!-- which you changed! Including sections you did not edit will reduce performance and limit -->
+<!-- compatibility with future versions and other skins. -->
 
 <!-- Body element, don't touch -->
 <skin xmlns="http://www.shareaza.com/schemas/Skin.xsd" version="1.0">
@@ -14,8 +14,8 @@
 <manifest	name="繁體中文"
 		author="James Bond"
 		updateBy="James Bond"
-		description="Shareaza Default Traditional Chinese language File"
-		link=""
+		description="Shareaza Default Chinese (Traditional) Skin File"
+		link="http://shareaza.sourceforge.net/"
 		email=""
 		version="2.2.2.12"
 		type="Language"
