--- a/Languages/Old/default-ar.xml
+++ b/Languages/Old/default-ar.xml
@@ -1,11 +1,11 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 
-<!-- Shareaza Default Arabic Skin File -->
+<!-- Shareaza Default Arabic Skin File --> <!-- This translation is based on default-en.xml SVN rev.xxxx -->
 
 <!-- This skin basically represents the current Shareaza defaults. You can use this file as -->
 <!-- a basis for creating new skins, however in a new skin be sure to ONLY include the sections -->
-<!-- which you changed!  Including sections you did not edit will reduce performance and limit  -->
-<!-- compatibility with future versions and other skins.  -->
+<!-- which you changed! Including sections you did not edit will reduce performance and limit -->
+<!-- compatibility with future versions and other skins. -->
 
 <!-- Body element, don't touch -->
 <skin xmlns="http://www.shareaza.com/schemas/Skin.xsd" version="1.0">
@@ -15,8 +15,8 @@
 		author="lazorde"
 		updatedBy=""
 		description="Shareaza Default Arabic Skin File"
-		link="http://www.shareaza.com/"
-		email="lazorde_sa@hotmail.com"
+		link="http://shareaza.sourceforge.net/"
+		email="lazorde_sa(at)hotmail(dot)com"
 		version="2.1.0.18"
 		type="Language"
 		language="ar"
