--- a/Languages/Old/default-sv.xml
+++ b/Languages/Old/default-sv.xml
@@ -1,11 +1,11 @@
-﻿<?xml version="1.0" encoding="UTF-8" ?>
+﻿<?xml version="1.0" encoding="UTF-8"?>
 
-<!-- Shareaza Default Swedish Skin File -->
+<!-- Shareaza Default English Skin File --> <!-- This translation is based on default-en.xml SVN rev.xxxx -->
 
 <!-- This skin basically represents the current Shareaza defaults. You can use this file as -->
 <!-- a basis for creating new skins, however in a new skin be sure to ONLY include the sections -->
-<!-- which you changed!  Including sections you did not edit will reduce performance and limit  -->
-<!-- compatibility with future versions and other skins.  -->
+<!-- which you changed! Including sections you did not edit will reduce performance and limit -->
+<!-- compatibility with future versions and other skins. -->
 
 <!-- Body element, don't touch -->
 <skin xmlns="http://www.shareaza.com/schemas/Skin.xsd" version="1.0">
@@ -14,11 +14,11 @@
 <manifest	name="Svenska"
 		author="Marcus Ehrenlans"
 		updatedBy=""
-		description="Svensk översättning av Shareaza"
-		link="http://www.shareaza.com/"
-		email="swey1 (at) hotmail (dot) com"
+		description="Shareaza Default Swedish Skin File"
+		link="http://shareaza.sourceforge.net/"
+		email="swey1(at)hotmail(dot)com"
 		version="2.1.0.42"
-		type="language"
+		type="Language"
 		language="sv"
 		prompt="Klicka här för att välja svenska som ditt språk."
 />
