--- a/Languages/default-hu.xml
+++ b/Languages/default-hu.xml
@@ -4,19 +4,19 @@
 
 <!-- This skin basically represents the current Shareaza defaults. You can use this file as -->
 <!-- a basis for creating new skins, however in a new skin be sure to ONLY include the sections -->
-<!-- which you changed!  Including sections you did not edit will reduce performance and limit  -->
-<!-- compatibility with future versions and other skins.  -->
+<!-- which you changed! Including sections you did not edit will reduce performance and limit -->
+<!-- compatibility with future versions and other skins. -->
 
 <!-- Body element, don't touch -->
 <skin xmlns="http://www.shareaza.com/schemas/Skin.xsd" version="1.0">
 
 <!-- Manifest -->
-	<manifest	name="Magyar"
+<manifest	name="Magyar"
 		author="Yuri"
 		updatedBy="Yuri"
 		description="Shareaza Default Hungarian Skin File"
 		link="http://totenkopf.uw.hu"
-		email="yurielvtars(AT)gmail(DOT)com"
+		email="yurielvtars(at)gmail(dot)com"
 		version="2.3.0.0"
 		type="Language"
 		language="hu"
